# simple-salesforce

./: .gitignore  .pylintrc  .travis.yml  CHANGES  LICENSE.txt  MANIFEST.in  README.md  README.rst  bulk.py  context7.json  pyproject.toml  review_checklist.md  ruff.toml  setup.cfg  setup.py  static_requirements.txt  test_requirements.txt  tox.ini
.codeboarding/: Salesforce Authentication & Session Management.md  Salesforce Bulk API Client.md  Salesforce Core API Client.md  Salesforce Core Utilities & Error Handling.md  Salesforce Metadata API Client.md  on_boarding.md
.github/workflows/: publish.yml  release-harmonizer.yml  test.yml
docs/: Makefile  changes.rst  conf.py  index.rst  make.bat  requirements.txt
docs/_static/: .gitkeep
docs/api/: modules.rst  simple_salesforce.rst  simple_salesforce.tests.rst
docs/user_guide/: additional_features.rst  apex.rst  bulk2_api.rst  bulk_api_notes.rst  development.rst  examples.rst  helpful_resources.rst  metadata_api.rst  misc.rst  other_REST_examples.rst  queries.rst  record_management.rst  tooling.rst
just_salesforce/: __init__.py  api.py  login.py  util.py
just_salesforce/tests/: __init__.py  test_api.py  test_login.py  test_util.py
local_setup/: setup.sh
simple_salesforce/: __init__.py  __version__.py  _version.py  api.py  basic_job_xml_template.xml  bulk.py  bulk2.py  close_job.xml  composite.py  exceptions.py  feature.html  format.py  log.py  login.py  messages.py  metadata  metadata.py  metadata.wsdl  session.py  sfdc_session.py  tcrm.py  upsert_job_xml_template.xml  util.py  wave.py
simple_salesforce/aio/: __init__.py  aio_util.py  api.py  bulk.py  login.py  metadata.py
simple_salesforce/tests/: __init__.py  sample-key.pem  test_api.py  test_bulk.py  test_bulk2.py  test_bulk2_csv.py  test_composite.py  test_format.py  test_login.py  test_util.py
simple_salesforce/tests/test_aio/: conftest.py  test_aio_util.py  test_api.py  test_bulk.py  test_login.py
